# proyecto_Asistente

./: .env  .env.example  .env.production  .env.production.example  .env.test  DEPLOYMENT.md  Dockerfile  README.md  STANDARDIZATION.md  alembic.ini  app.db  create_admin.py  create_tables.py  docker-compose.prod.yml  docker-compose.yml  final_verification_checklist.md  monitoring-instructions.md  pyproject.toml  requirements.txt  setup.py  simple_app.py  simple_http_server.py  standardization_plan.md
.github/workflows/: ci-cd.yml  dependencies.yml  security.yml
alembic/: env.py
app/: __init__.py  main.py  test_app.py
app/api/: __init__.py  deps.py
app/core/: config.py  logging.py  monitoring.py  notifications.py  rate_limit.py  security.py
app/db/: base.py  database.py
app/middleware/: logging.py  metrics.py  rate_limit.py
app/models/: __init__.py  appointment.py  blocked_schedule.py  cita.py  client.py  cliente.py  health.py  horario_bloqueado.py  user.py  (+6 more)
docs/: CONTRIBUTING.md  DOCUMENTACION.md  README.md  index.md  monitoring.md  troubleshooting.md
prometheus/: prometheus.yml
salon_assistant.egg-info/: SOURCES.txt
scripts/: backup_db.py  backup_setup.sh  deploy.sh  generate_docs.py  generate_env.sh  generate_test_metrics.py  health_check.ps1  health_check.sh  init_db.sh  manage_backups.sh  manage_logs.sh  manage_secrets.sh  restore_db.py  security_setup.sh  setup_cron.sh  setup_server.sh  setup_ssl.sh  setup_task.ps1  simple_health_check.ps1  start_monitoring.ps1  start_production.sh  test_metrics.ps1
tests/: conftest.py  test_metrics_simple.py
(+92 files in other folders)
